--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "node-todo-api",
+  "name": "todo-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec \"npm test\""
   },
-  "engines": {
+  "engines":{
     "node": "6.2.2"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "express": "^4.16.3",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^3.0.2",
+    "mocha": "^5.2.0",
     "nodemon": "^1.10.2",
     "supertest": "^2.0.0"
   }
