--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
-    "lodash": "^4.15.0",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "validator": "^10.7.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
